# libmpv-darwin-build

./: Makefile
.github/workflows/: ci.yaml
cmd/downloads/: main.go
cross-files/: ios-arm64.ini  iossimulator-amd64.ini  iossimulator-arm64.ini  macos-amd64.ini  macos-arm64.ini
patches/: ffmpeg-fix-vp9-hwaccel.patch  mpv-fix-missing-objc.patch  mpv-ios-build.patch  mpv-remove-libass.patch
scripts/ffmpeg/: build.sh
scripts/freetype/: build.sh
scripts/libplacebo/: build.sh
scripts/mbedtls/: build.sh
scripts/mpv/: build.sh  build_0.36.sh  build_0.38.sh
scripts/pkg-config/: meson.build
scripts/uchardet/: build.sh
scripts/vulkan/: build.sh  meson.build
